--- a/index.css
+++ b/index.css
@@ -66,7 +66,8 @@ button:hover {
     overflow: hidden;
     text-overflow: ellipsis; 
     margin-top: 0px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
+    border: none;
 }
 #formula{
     text-align: right;
@@ -80,6 +81,7 @@ button:hover {
     white-space: nowrap; 
     overflow: hidden;
     text-overflow: ellipsis; 
+    border: none;
 }
 
 .round{
